2014-11-20  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.6.4 release.

        * gtk/NEWS: Add release notes for 2.6.4.

2014-11-01  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(r163656): Remote inspector doesn't work unless preferences change after page initialization
        https://bugs.webkit.org/show_bug.cgi?id=138246

        Reviewed by Joseph Pecoraro.

        The problem is that initializeWebPage() is still using
        pageGroup().preferences() instead of m_preferences to check if
        developer extras are enabled to enable remote inspection of the page.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::initializeWebPage): Use m_preferences
        instead of pageGroup().preferences().

2014-11-01  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(CMake): Make it possible to build without introspection
        https://bugs.webkit.org/show_bug.cgi?id=138006

        Reviewed by Philippe Normand.

        Do not install introspection files when introspection is disabled.

        * PlatformGTK.cmake:

2014-11-19  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] Error in documentation of webkit_print_operation_get_page_setup()
        https://bugs.webkit.org/show_bug.cgi?id=138868

        Reviewed by Carlos Garcia Campos.

        Fix copypaste error in documentation of
        webkit_print_operation_get_page_setup().

        * UIProcess/API/gtk/WebKitPrintOperation.cpp:

2014-11-18  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [SOUP] [GnuTLS] Don't use a SSL3.0 record version in client hello.
        https://bugs.webkit.org/show_bug.cgi?id=138794

        Reviewed by Sergio Villar Senin.

        It seems that following POODLE many sites incorrectly banned SSL 3.0
        record packet versions. Since GnuTLS uses a SSL 3.0 record to
        advertise TLS 1.2, they are effectively banning it even if it doesn't